feat/backend: novos atributos na classe horario, com modificação na service e controller